Move to JDK 21.